analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/destructuringInsideCallChain.kt
fun main(args: Array<String>) {
    "hello".<expr>val.toString()</expr>.println
}